Fix dark mode code styling.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,24 +9,40 @@
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+
+    button {
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        transition: 0.3s;
+    }
+
+    button:hover {
+        background-color: #ddd;
+    }
+
+    button.active {
+        background-color: #ccc;
+    }
 }
 
-.code-tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-}
+html[mode="dark"] .code-tab {
+  background-color: #303030;
 
-.code-tab button:hover {
-    background-color: #ddd;
-}
+  button {
+    color: #fff;
+  }
 
-.code-tab button.active {
-    background-color: #ccc;
+  button:hover {
+      background-color: #242424;
+  }
+
+  button.active {
+      background-color: #1c1c1c;
+  }
 }
 
 .code-tabcontent {
